# wheelchair-rugby-analytics

./: GAME_ROTATION_EXPLANATION.txt  Procfile  analysis.ipynb  baseline_comparison.py  coach_app.py  dataAnalysis.py  main.py  pyproject.toml  requirements.txt  stint_data.csv  verify_data.py
